# Arcade

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  arcade  doc.md
.cache/clangd/index/: Units.cpp.E8B810DFD3966C0A.idx  Units.hpp.C921D70F619F665A.idx  Widget.cpp.725159EC31400285.idx  Widget.hpp.773540EA4A655D3E.idx  main.cpp.65E4B80E9F9441D0.idx
.github/workflows/: ci.yml
mk/: config.mk  sources.mk
src/: CMakeLists.txt
src/Core/: AScene.cpp  CMakeLists.txt  Core.cpp  DisplayListScene.cpp  GameListScene.cpp  GameScene.cpp  ListMenuScene.cpp  NameEntryScene.cpp  main.cpp
src/Core/include/: AScene.hpp  Core.hpp
src/DLLoader/: CMakeLists.txt  DlLoader.cpp
src/DLLoader/include/: DlLoader.hpp
src/Display/: CMakeLists.txt
src/Display/Ncurses/: CMakeLists.txt  NcursesDisplay.cpp  UnitView.cpp
src/Display/Ncurses/include/: NcursesDisplay.hpp  UnitView.hpp
src/Display/SDL/: CMakeLists.txt  SdlDisplay.cpp
src/Display/SDL/include/: SdlDisplay.hpp
src/DynamicLibraryLoader/: CMakeLists.txt  DynamicLibraryLoader.cpp  DynamicLibraryLoader.hpp
src/Game/: AGameModule.cpp  CMakeLists.txt
src/Game/PacmanGame/: CMakeLists.txt  Map.cpp  MapConfig.txt  Pacman.cpp  PacmanGame.cpp
src/Game/PacmanGame/include/: Map.hpp  Pacman.hpp  PacmanGame.hpp
src/Game/SnakeGame/: Snake.cpp
src/Game/SnakeGame/include/: Snake.hpp
src/Game/include/: AGameModule.hpp
src/Interfaces/: CMakeLists.txt  DisplayInterface.hpp  GameInterface.hpp
src/SnakeGame/include/: Snake.hpp
src/TestLib/: CMakeLists.txt  test_lib.cpp  test_lib.hpp
src/Widget/: CMakeLists.txt  Units.cpp  Widget.cpp
src/Widget/include/: Units.hpp  Widget.hpp
